--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NetAssist - Asistente de Redes</title>
+    <title>SysBot - Asistente de Redes</title>
     <style>
       * {
         margin: 0;
@@ -1068,4 +1068,5 @@
     </script>
   </body>
 </html>
+
 
