--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
           <div class="logo">
             <div class="logo-icon">🌐</div>
             <div class="logo-text">
-              <h1>NetAssist</h1>
+              <h1>SysBot</h1>
               <p>Asistente de Redes</p>
             </div>
           </div>
@@ -773,7 +773,7 @@
     </div>
     <script>
       (() => {
-        const FIXED_PATH = "webhook/d8fdab7c-0e1a-4e81-b28c-c002816ae8a6";
+        const FIXED_PATH = "/webhook/d8fdab7c-0e1a-4e81-b28c-c002816ae8a6";
         const STORAGE_KEY = "sysbot_appurl_v1";
 
         const $input = document.getElementById("appurl-input");
@@ -1068,5 +1068,6 @@
     </script>
   </body>
 </html>
+
 
 
